kubernetes/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client  # <-- More like a class name in react --> #
    spec:
      containers:
        - name: client
          image: kishore007k/client
          ports:
            - name: client
              containerPort: 3000

---

# Cluster IP Service
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  type: ClusterIP
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
