kubernetes/comment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
  labels:
    app: comments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments  # <-- More like a class name in react --> #
    spec:
      containers:
        - name: comments
          image: kishore007k/comment_service
          ports:
            - name: comments
              containerPort: 4001

---

# Cluster IP Service
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  type: ClusterIP
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
