kubernetes/eventbus-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: eventbus-srv
spec:
  type: NodePort
  selector:
    app: post
  ports:
    - name: eventbus # this can be anything
      protocol: TCP
      port: 4002
      targetPort: 4002
