kubernetes/moderator-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderator-depl
  labels:
    app: moderator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderator
  template:
    metadata:
      labels:
        app: moderator  # <-- More like a class name in react --> #
    spec:
      containers:
        - name: moderator
          image: kishore007k/moderator_service
          ports:
            - name: moderator
              containerPort: 4003

---

# Cluster IP Service
apiVersion: v1
kind: Service
metadata:
  name: moderator-srv
spec:
  selector:
    app: moderator
  type: ClusterIP
  ports:
    - name: moderator
      protocol: TCP
      port: 4003
      targetPort: 4003
