kubernetes/post-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: posts # this can be anything
      protocol: TCP
      port: 4000
      targetPort: 4000
