kubernetes/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
  labels:
    app: query
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query  # <-- More like a class name in react --> #
    spec:
      containers:
        - name: query
          image: kishore007k/query_service
          ports:
            - name: query
              containerPort: 4002

---

# Cluster IP Service
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  type: ClusterIP
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
